fix align-items to text-align like I wanted

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,5 +60,5 @@ h1  {
 }
 
 .feature-box {
-  align-items: center;
+  text-align: center;
 }
